--- a/.github/workflows/health-report.yml
+++ b/.github/workflows/health-report.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           username: ${{ secrets[matrix.username] }}
           password: ${{ secrets[matrix.password] }}
+          cookie_eai_sess: ${{ secrets[matrix.cookie_eai_sess] }}
           dingtalk_token: ${{ secrets[matrix.dingtalk_token] }}
         env:
           ACTION_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
